--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 </header>
 <body>
+  <div class= "divider"></div>
   <h1>Chocolate Pizza</h1>
   <h4>POSTED ON 15TH DEC 2013 / DESSERTS</h4>
   <h5><img src="print-icon.png">PRINT</h5>
@@ -29,5 +30,28 @@
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ut est nostrum soluta error qui obcaecati corporis beatae, blanditiis laboriosam tempora a aspernatur repellat iure eius et illo accusantium? Fuga?</p>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ut est nostrum soluta error qui obcaecati corporis beatae, blanditiis laboriosam tempora a aspernatur repellat iure eius et illo accusantium? Fuga?</p>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ut est nostrum soluta error qui obcaecati corporis beatae, blanditiis laboriosam tempora a aspernatur repellat iure eius et illo accusantium? Fuga?</p>
+  <ul>
+    <li><input type= "checkbox" id= "milk">1 1/2 cups milk</li>
+    <li><input type= "checkbox" id= "mascarpone">1/2 cup mascarpone</li>
+    <li><input type= "checkbox" id= "salt">1/2 tsp pink salt</li>
+    <li><input type= "checkbox" id= "figs">1 lb Black Mission Figs</li>
+    <li><input type= "checkbox" id= "bsugar">1/2 cup brown sugar</li>
+    <li><input type= "checkbox" id= "water">2-4 tbsp water</li>
+    <li><input type= "checkbox" id= "cream">1 1/2 cups heavy cream</li>
+    <li><input type= "checkbox" id= "sugar">1/3 granulated sugar</li>
+    <li><input type= "checkbox" id= "egg">2 egg yolks</li>
+    <li><input type= "checkbox" id= "lemon">1 lemon, juiced</li>
+    <li><input type= "checkbox" id= "butter">2 tbsp butter</li>
+    <li><input type= "checkbox" id= "pecans">1 cup honey roasted pecans, roughly chopped</li> 
+  </ul>
+  <div class= "divider"></div>
 </body>
+<footer>
+  <img src= "van-pic.png" class= "Vanessa">
+  <h3>Vanessa Stevenson</h3>
+  <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who i am.</p>
+  <button>SHARE RECIPE</button>
+  <img src= "small-logo.png" class= "smalllogo">
+  <h5>Delicious &copy; 2013 &#8226; All Rights Reserved.<br> Proudly published with Ghost.</h5>
+</footer>
 </html>
