attempted to fix css

--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
   <title>Document</title>
 </head>
 <header>
-  <h2>Delicious</h2>
-  <h3>THE BEST FOOD BLOG ON THE WEB</h3>
-  <img src="logo.png" class="medium">
-  <img src="fb-icon.png" class="medium">
-  <img src="twit-icon.png" class="medium">
-  <img src="gp-icon.png" class="medium">
-  <img src="insta-icon.png" class="medium">
-  <img src="flic-icon.png" class="medium">
-  <img src="pint-icon.png" class="medium">
-  <img src="rss-icon.png" class="medium">
-  <img src="mail-icon.png" class="medium">
-
+  <p>
+    <img src="logo.png" class="logo">
+    Delicious<br>
+    THE BEST FOOD BLOG ON THE WEB
+  </p>
 </header>
 <body>
+      <section>
+      <img src="fb-icon.png" class="medium">
+      <img src="twit-icon.png" class="medium">
+      <img src="gp-icon.png" class="medium">
+      <img src="insta-icon.png" class="medium">
+      <img src="flic-icon.png" class="medium">
+      <img src="pint-icon.png" class="medium">
+      <img src="rss-icon.png" class="medium">
+      <img src="mail-icon.png" class="medium">
+    </section>
   <div class= "divider"></div>
   <h1>Chocolate Pizza</h1>
   <h4>POSTED ON 15TH DEC 2013 / DESSERTS</h4>
