--- a/index.html
+++ b/index.html
@@ -9,27 +9,30 @@
 </head>
 <header>
   <p>
-    <img src="logo.png" class="logo">
-    Delicious<br>
-    THE BEST FOOD BLOG ON THE WEB
-  </p>
-</header>
-<body>
-      <section>
+    <section>
       <img src="fb-icon.png" class="medium">
       <img src="twit-icon.png" class="medium">
       <img src="gp-icon.png" class="medium">
       <img src="insta-icon.png" class="medium">
       <img src="flic-icon.png" class="medium">
       <img src="pint-icon.png" class="medium">
-      <img src="rss-icon.png" class="medium">
-      <img src="mail-icon.png" class="medium">
+      <section>
+        <img src="rss-icon.png" class="medium">
+        <img src="mail-icon.png" class="medium">
+      </section>
     </section>
+    <img src="logo.png" class="logo">
+    Delicious<br>
+    THE BEST FOOD BLOG ON THE WEB
+  </p>
+</header>
+<body>
+
   <div class= "divider"></div>
   <h1>Chocolate Pizza</h1>
-  <h4>POSTED ON 15TH DEC 2013 / DESSERTS</h4>
-  <h5><img src="print-icon.png">PRINT</h5>
-  <img src="choco-pizza.png">
+  <h4>POSTED ON 15TH DEC 2013 / DESSERTS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="print-icon.png">PRINT</h4>
+
+  <img src="choco-pizza.png" class="pizza">
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ut est nostrum soluta error qui obcaecati corporis beatae, blanditiis laboriosam tempora a aspernatur repellat iure eius et illo accusantium? Fuga?</p>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ut est nostrum soluta error qui obcaecati corporis beatae, blanditiis laboriosam tempora a aspernatur repellat iure eius et illo accusantium? Fuga?</p>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ut est nostrum soluta error qui obcaecati corporis beatae, blanditiis laboriosam tempora a aspernatur repellat iure eius et illo accusantium? Fuga?</p>
